Remove class cruft from posts

--- a/themes/digital.gov/layouts/posts/single.html
+++ b/themes/digital.gov/layouts/posts/single.html
@@ -6,8 +6,7 @@
 {{ define "content" }}
 <div id="contentleft" class="clearfix">
   <div id="content" class="clearfix">
-    <div class="post singlepost post-387041 type-post status-publish format-standard has-post-thumbnail hentry category-managing-digital category-strategy-policy tag-cloud tag-gsa tag-security tag-u-s-general-services-administration Managing Digital Strategy &amp; Policy"
-      id="single-post-387041">
+    <div class="post singlepost type-post status-publish format-standard  hentry">
 
       <div class="entry">
 
